Bug 187050 - KOrganizer: font settings do not work for 'Agenda view' mode
Summary: KOrganizer: font settings do not work for 'Agenda view' mode
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-13 14:24 UTC by Andrey
Modified: 2009-03-15 01:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey 2009-03-13 14:24:41 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    SuSE RPMs

KDE 4 KOrganizer settings (Settings->Configure KOrganizer->Colors and Fonts->Fonts) 
do not change font size, nor font style in 'Agenda view' mode.

All other font settings seems to work as they should 
(e.g. 'Month view' mode or Time bar font settings).
Comment 1 Allen Winter 2009-03-15 01:04:48 UTC
SVN commit 939506 by winterz:

Fix changing font for agenda view items.
Unfortunately, the bug was caused from some leftover theming support from
last year's GSoC that was never fully implmented.

Loïc, maybe you have some time this summer to pick up your work again?

BUG: 187050
CCMAIL: loic.corbasson@gmail.com


 M  +1 -10     koagendaitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=939506