Fix changing font for agenda view items. Unfortunately, the bug was caused from some leftover theming support from last year's GSoC that was never fully implmented.

Loïc, maybe you have some time this summer to pick up your work again?

BUG: 187050
CCMAIL: loic.corbasson@gmail.com

svn path=/trunk/KDE/kdepim/; revision=939506